# advent-of-code-2021

./: Cargo.toml  README.md  file.rs
day-1/: main.rs
day-10/: main.rs
day-11/: main.rs
day-12/: main.rs
day-13/: main.rs
day-14/: main.rs
day-15/: main.rs  test_input.txt  test_result_multiply.txt
day-2/: main.rs
day-3/: main.rs
day-4/: input.txt  main.rs
day-5/: main.rs
day-6/: main.rs
day-7/: main.rs
day-8/: input.txt  main.rs
day-9/: main.rs
