[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Luis Argumedo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "day-1"
path = "day-1/main.rs"

[[bin]]
name = "day-2"
path = "day-2/main.rs"

[[bin]]
name = "day-3"
path = "day-3/main.rs"

[[bin]]
name = "day-4"
path = "day-4/main.rs"
