[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Luis Argumedo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"


[[bin]]
name = "day-1"
path = "day-1/main.rs"

[[bin]]
name = "day-2"
path = "day-2/main.rs"

[[bin]]
name = "day-3"
path = "day-3/main.rs"

[[bin]]
name = "day-4"
path = "day-4/main.rs"

[[bin]]
name = "day-5"
path = "day-5/main.rs"

[[bin]]
name = "day-6"
path = "day-6/main.rs"

[[bin]]
name = "day-7"
path = "day-7/main.rs"

[[bin]]
name = "day-8"
path = "day-8/main.rs"

[[bin]]
name = "day-9"
path = "day-9/main.rs"
